--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
       </a>
       <nav class="navbar">
         <a href="index.html">Home</a>
-        <a href="#excercise">Excercises</a>
         <a href="#services">Services</a>
+        <a href="#excercise">Exercises</a>
         <a href="#pricing">Pricing</a>
+        
         <a href="#contact">Contact</a>
+        <a href="http://localhost/form/index.php" target="_blank">Fill Form</a>
         <a href="login.html" class="btn">Join Us</a>
       </nav>
     </header>
@@ -48,7 +50,7 @@
             >
           </div>
           <div class="hero-image">
-            <img src="images/bodybuilder.webp" alt="Image" />
+            <img src="images/bodybuilder.webp" alt="" />
           </div>
         </div>
       </section>
@@ -56,7 +58,7 @@
       <section class="offer-container">
         <h3>Our Offer</h3>
 
-        <section class="our-offer" id="services">
+        <section class="our-offer" id="services" style="margin:50px;">
           <div class="offer-box">
             <div class="offer-info">
               <i class="fa-solid fa-ticket-simple"></i>
@@ -88,6 +90,7 @@
 
       <section class="customer-reviews" id="excercise">
            <div style="display: flex; flex-direction: column; justify-content:center; align-items: center;">
+            <h3 class="exer" style="margin-top:25px">Exercises</h3>
             <a href="#" class="button txtsp">Yoga</a>
            <a href="#" class="button txtsp">Cardio</a>
            <a href="#" class="button txtsp">Strength</a>
