Fix HTML encoding issues in developer

--- a/developers.html
+++ b/developers.html
@@ -266,7 +266,7 @@
           <h3 class="dev-name">Piyush upadhyay</h3>
           <p class="dev-role">DATABASE</p>
           <div class="social-links">
-            <a href="#" class="portfolio-link">View Portfolio</a>
+            <a href="/images/developers/piyush.html" class="portfolio-link">View Portfolio</a>
           </div>
         </div>
 
@@ -294,3 +294,4 @@
     </footer>
   </body>
 </html>
+
