Fix HTML encoding issues in developers.html

--- a/developers.html
+++ b/developers.html
@@ -250,7 +250,7 @@
           <p class="dev-role">FRONTEND DEVELOPER</p>
           <div class="social-links">
             <a
-              href="https://priyanshudubey8318.github.io/"
+              href="/images/developers/index.html"
               class="portfolio-link"
               >View Portfolio</a
             >
@@ -294,4 +294,5 @@
     </footer>
   </body>
 </html>
+
 
