Update profile picture and HTML structure

--- a/images/developers/index.html
+++ b/images/developers/index.html
@@ -11,7 +11,7 @@
 
 
   <header>
-    <img src="/image/pritam singh.jpeg" alt="Pritam Singh" class="profile-pic" />
+    <img src="/images/developers/pritam (2).jpg" alt="Pritam Singh" class="profile-pic" />
     <h1>Pritam Singh</h1>
     <p style="color:black;font-size:40px"> pritamsingh3455@gmail.com | +91 8292385016</p>
   </header>
@@ -125,4 +125,5 @@
     <p style="font-weight: bold; font-size: 40px;">© 2025 <span>Pritam Singh</span> </p>
   </footer>
 </body>
+
 </html>
