Fix HTML structure and update stylesheet link

--- a/images/developers/index.html
+++ b/images/developers/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pritam Singh | Portfolio</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/images/developers/style.css">
 </head>
 
 <body>
@@ -127,3 +127,4 @@
 </body>
 
 </html>
+
